# mochi-gallery

./: .gitignore  LICENSE  README.md  README.md.bak  app.py  list_models.py  pyproject.toml
assets/styles/: ansel.json  cinema.json  cyberpunk.json  darkfantasy.json  ghibli.json  giger.json  oil_paint.json  picasso.json  pointilism.json  popart.json  quantum.json  steampunk.json  vangogh.json  watercolor.json
src/mochi_gallery/: cli.py  cli.py.bak  client.py  client.py.bak  gallery_utils.py  models.py  painter.py
src/mochi_gallery.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
templates/: generator.html  partial_result.html
